# EmpathicRobot

./: .env.example  .gitattributes  .gitignore  CODEOWNERS  LICENSE  README.md  SUMMARY.md  contact.md  pre-commit-config.yaml  pydoc-markdown.yml  pytest.ini  requirements.txt  requirments-dev.txt  setup.cfg  setup.py  testtest.py
.github/workflows/: python-build.yml
application/: languages.md  untitled.md
baseline-model/: Analyse_baseline_model.ipynb  baseline_model.py
classification-model/: Run_vgg16_model.ipynb  classification_model.py  classification_model_vgg16.py
classification-model/conv/: conv_model.py  data_preparation.ipynb  data_prepare.py  run_conv.ipynb
classification-model/vgg16/: Run_vgg16_model.ipynb  classification_model.py  classification_model_vgg16.py  vgg16.py  vgg16_pretrained.py
data/: README.md  general_defenitions.py  type_hinting.py
data-processing/: affectNet_processing.ipynb  data-processing-affect.ipynb
data-processing/affectNet_data/: affectNet_analysis.ipynb
data-processing/ferPlus_data/: ferPlus_processing.ipynb  ferPlus_relabel.ipynb
data/affectNet/: affectNet_functions.py  data_preparation _AffectNet.ipynb  data_processing.py  (+2 more)
face-detection-model/: face-detection-v1.py  face-detection.py
face_detection_model/: face_detection.py
facedetection/: face_detection.py
get-started/: documentation.md  installation-1.md
git/: linting.md  rules.md
model/: background-information.md  documentation.md
models/: README.md  functions.py
src/models/: README.md
tests/: test_baseline_model.py  test_conv_model.py  test_data_affectnet.py  test_data_ferplus.py  test_data_general.py  test_detector_accuracy.py  test_face_detection.py  test_functions.py  test_model_functions.py  test_placeholder.py  test_validation_set.py
validation-model/: fer1_model.py
(+68 files in other folders)
