[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[tool:pytest]
testpaths = tests

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[flake8]
max-line-length=140
max-complexity=6
docstring-convention=numpy
exclude=^docs/,setup.py,__init__.py,^tests/
; ignore:
; C812 - Missing trailing comma
; C813 - Missing trailing comma in Python 3
; W503 - Line break occured before a binary operator - not pep8
; use bugbear B950 instead of E501

; select
; B950 - Max line length - gives 10% allowance

ignore = C812,C813,W503
select = C,D,E,F,W,B,B950

[mypy]
ignore_missing_imports = True