[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[tool:pytest]
testpaths = tests

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[flake8]
max-line-length=140
max-complexity=6
exclude=^docs/,setup.py,__init__.py,^tests/,venv
; ignore:
; C812 - Missing trailing comma
; C813 - Missing trailing comma in Python 3
; W503 - Line break occured before a binary operator - not pep8
; use bugbear B950 instead of E501

; D107 Missing docstring in __init__
; D202 No blank lines allowed after function docstring
; D205 1 blank line required between summary line and description
; D208 Docstring is over-indented
; D400 First line should end with a period
; E402 Module level import not at top of file

; select
; B950 - Max line length - gives 10% allowance

ignore = C812,C813,W503,D107,D202,D205,D208,D400,E402
select = C,D,E,F,W,B,B950

[mypy]
ignore_missing_imports = True